# Spotlight

./: .gitattributes  README.md  requirements.txt
control_plane/: spotlight_ctrl.py.template
data_plane/: headers.p4  parser.p4  spotlight.p4.template
host_comparison/: CMakeLists.txt  host_comp.cpp
pivot_attacks/: chisel.pcap
scripts/: find_active_hosts.sh  gen_spotlight.py  run_attacks.py
